# gnu_bayonne

./: .gitignore  CMakeLists.txt  COPYRIGHT  ChangeLog  DRIVERS  Makefile.am  PKGBUILD.in  README  TODO  bayonne-config.1  bayonne-config.h.cmake  bayonne-config.in  bayonne.pc.in  bayonne.spec.in  cmake-abi.sh  config.h.cmake  configure.ac  directive  libbayonne.pc.in
common/: Makefile.am  common.h  dbi.cpp  driver.cpp  message.cpp  psignals.cpp  registry.cpp  scheduler.cpp  segment.cpp  server.cpp  server.h  signals.cpp  stats.cpp  thread.cpp  timeslot.cpp  uri.cpp  voip.cpp
config/: Makefile.am  bayonne.conf  bayonne.cron  bayonne.defaults  bayonne.init  bayonne.service  users.conf
debian/: bayonne-bin.install  bayonne-sipw.install  bayonne-sipw.postinst  bayonne-sipw.postrm  bayonne-vpb.install  bayonne-vpb.postinst  bayonne.init  bayonne.service  control
docs/: script.tex
engine/: Makefile.am  script.cpp
inc/: Makefile.am  bayonne.h
inc/bayonne/: Makefile.am  bayonne.h  dbi.h  driver.h  namespace.h  registry.h  segment.h  server.h  signals.h  stats.h  thread.h  timeslot.h  uri.h  voip.h
packaging/arch/: PKGBUILD
packaging/debian/: bayonne.default  bayonne.service  changelog  control  copyright  libbayonne-dev.install  rules  watch
runtime/: Makefile.am  audio.cpp  audiocodecs.cpp  audiofile.cpp  audiostream.cpp  checks.cpp  control.cpp  detect.cpp  devices.cpp  dialers.cpp  env.cpp  info.cpp  interp.cpp  methods.cpp  modules.cpp  phrasebook.cpp  resample.cpp  script.cpp  serial.cpp  termios.cpp  tonegen.cpp  wserial.cpp
server/: CMakeLists.txt  Makefile.am  driver.cpp  group.cpp  message.cpp  rtp.cpp  scheduler.cpp  server.cpp  server.h  signals.cpp  timeslot.cpp
server/aculab/: Makefile.am  driver.cpp  driver.h
server/capi20/: Makefile.am  driver.cpp  driver.h
server/common/: Makefile.am  driver.cpp  group.cpp  rtp.cpp  server.cpp  server.h  signals.cpp  timeslot.cpp
server/dialogic/: Makefile.am  driver.cpp  driver.h
server/exosip2/: Makefile.am  driver.cpp  driver.h  server.cpp
server/gatekeeper/: Makefile.am  driver.cpp
server/openh323/: Makefile.am  driver.cpp  driver.h
server/phonedev/: Makefile.am  driver.cpp  driver.h
server/pika/: Makefile.am  driver.cpp  driver.h
server/simulator/: Makefile.am  driver.cpp  driver.h
server/sipwitch/: Makefile.am  driver.cpp  driver.h  registry.cpp  thread.cpp  timeslot.cpp
server/vpbapi/: Makefile.am  driver.h
sipw/: CMakeLists.txt  Makefile.am  driver.cpp  driver.h  registry.cpp  srv.cpp  thread.cpp  timeslot.cpp  uri.cpp  voip.cpp  voip.h
sipwitch/: CMakeLists.txt  Makefile.am  driver.cpp  driver.h  media.cpp  registry.cpp  thread.cpp  timeslot.cpp  voip.cpp  voip.h
test/: CMakeLists.txt  Makefile.am  mergescript.scr  script.cpp  testscript.scr
utils/: CMakeLists.txt  Makefile.am  audiotool.1  audiotool.cpp  baylint.1  baylint.cpp  bayonne.1  bayonne.8  bayonne.cpp  bayonnectl.8  lint.cpp  phrasebook.1  phrasebook.cpp  tonetool.1  tonetool.cpp
vpb/: CMakeLists.txt  Makefile.am  board.cpp  driver.cpp  driver.h
